# LP_APP

./: .gitignore  README.md  interfaces.py  main.py  models.py  pyproject.toml  renderers.py  requirements.txt  solvers.py
lp-gui/: index.html  package-lock.json  package.json
lp-gui/src/: App.css  App.jsx  index.css  main.jsx
lp-gui/src/api/: client.js  client.test.js
lp-gui/src/app/: App.jsx  App.test.jsx  SelectionScreen.jsx  WorkspaceShell.jsx  serviceRegistry.js
lp-gui/src/components/: Banner.jsx  Card.jsx  ConstraintList.jsx  ConstraintRow.jsx  ConstraintsForm.jsx  LoadingState.jsx  NumericField.jsx  ObjectiveEditor.jsx  ObjectiveForm.jsx  ResultPanel.jsx  SegmentedControl.jsx
lp-gui/src/hooks/: useLPForm.js
lp-gui/src/test/: setup.js
lp-gui/src/utils/: numberInput.js
lp-gui/src/workspaces/: GSSWorkspace.jsx  GSSWorkspace.test.jsx  LPWorkspace.jsx  LPWorkspace.test.jsx  SDWorkspace.jsx  SDWorkspace.test.jsx
optimization/algorithms/gradient/: objective.py  steepest_descent.py
optimization/app/: api.py  contracts.py  di.py  dto.py  exceptions.py  golden_section_service.py  linear_service.py  mappers.py  service.py  steepest_descent_service.py
optimization/core/: errors.py  interfaces.py  models.py  registry.py
optimization/infrastructure/: expression_utils.py  logging.py  plots.py  quadratic_parser.py  scalar_parser.py
tests/: test_api_boundaries.py  test_api_smoke.py  test_app_services.py  test_geometry.py  test_golden_section.py  test_golden_section_api.py  test_sd_exact_step.py  test_sd_parser_and_solver.py
(+13 files in other folders)
